--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -89,6 +89,7 @@ header span a {
 #mother {
   background-image: url("../images/img-story-main.png");
   text-align: left;
+  padding-left: 30px;
   font-size: 40px;
 }
 
@@ -108,6 +109,7 @@ header span a {
   display: flex;
   height: 300px;
   text-align: center;
+  align-items: center;
   font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
@@ -156,4 +158,45 @@ header span a {
   font-size: 16px;
   font-weight: bold;
   text-align: center;
+}
+
+/*Footer*/
+
+footer {
+  display: flex;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footernav {
+  display: inline-flex;
+  margin: 15px;
+}
+
+.footer-logo {
+  color: white;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: 2px solid white;
+}
+
+.footernav span {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.footernav a {
+  color: black;
+}
+
+.copyright {
+  display: inline-flex;
 }
